# taildrop-notifier

./: Cargo.toml  README.md  default.nix  flake.nix  module.nix
.github/workflows/: checks.yml
src/: main.rs
